[package]
name = "tree-to-excel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rtczza/tree-to-excel"
keywords = ["cli", "tree", "excel"]
authors = ["rtczza<rtczza@gmail.com>"]
description = "tool that converts the output of tree commands into Excel tables."
categories = ["command-line-utilities"]

[dependencies]
# Excel文件处理
rust_xlsxwriter = "0.62"
# 命令行参数处理
clap = { version = "4.4", features = ["derive"] }
# 错误处理
anyhow = "1.0"
